--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvmjAJSLJ3oX232S664YUS",
+      "authorship_tag": "ABX9TyPnNZuy3MppuqScOnw5J6Nt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,54 @@
         "\n",
         "## Floor Metrics – Sanity Checks\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from metrics import POSITION_METRIC_CONFIG, position_celiling_floor_stats"
+      ],
+      "metadata": {
+        "id": "ZUjOqNjSL__8",
+        "outputId": "bf3e700e-0e42-4ce5-f6bf-329c0a220ef2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 330
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'metrics'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-107309308.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPOSITION_METRIC_CONFIG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposition_celiling_floor_stats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'metrics'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HdKOJnJsMMeT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
