--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMzFJ2Xo0WVRyyKDPXXh19",
+      "authorship_tag": "ABX9TyPBn35ivNKpwbVa2uCAsioR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "IJ_fK4ykkO2t"
       },
       "outputs": [],
       "source": [
-        "# Talent Distribution Compression – Exploration\n",
+        "# EPL Talent Compression Analysis (2015–2024)\n",
         "\n",
-        "## EPL Prototype (2015–2016 - 2018-2019)\n",
+        "#This notebook reproduces the analysis underlying the EPL talent compression study.\n",
+        "#It loads player-season data, computes position-specific ceiling and floor metrics,\n",
+        "#and generates the final visualizations included in the repository.\n",
         "\n",
-        "## Ceiling Metrics – Sanity Checks\n",
-        "\n",
-        "## Floor Metrics – Sanity Checks\n"
+        "#Core metric logic is implemented in `src/metrics.py`.\n"
       ]
     },
     {
@@ -56,12 +56,15 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from src.metrics import position_ceiling_floor_stats"
       ],
       "metadata": {
         "id": "AnNjf6bJv94v"
       },
-      "execution_count": 53,
+      "execution_count": 60,
       "outputs": []
     },
     {
